# neonex

./: .gitignore  Cargo.toml  README.md  taplo.toml  uefi_run.sh
crates/neonex-core/: Cargo.toml  build.rs
crates/neonex-core/src/: lib.rs
crates/neonex-desktop/: Cargo.toml  build.rs
crates/neonex-desktop/src/: lib.rs  windowed_plugins.rs
crates/neonex-desktop/src/crossterm_plugins/: error.rs  event.rs  kitty.rs  mod.rs  mouse.rs
crates/neonex-embedded/: Cargo.toml
crates/neonex-embedded/src/: lib.rs
crates/neonex-macros/: Cargo.toml
crates/neonex-macros/src/: lib.rs
crates/neonex-mobile/: Cargo.toml
crates/neonex-mobile/src/: lib.rs
crates/neonex-mockplatform/: Cargo.toml
crates/neonex-mockplatform/src/: lib.rs
crates/neonex-platform/: Cargo.toml
crates/neonex-platform/src/: lib.rs
crates/neonex-shared/: Cargo.toml
crates/neonex-shared/src/: lib.rs
crates/neonex-terminal/: Cargo.toml
crates/neonex-terminal/src/: lib.rs
crates/neonex-uefi/: Cargo.toml  README.md
crates/neonex-uefi/src/: lib.rs  ratatui_uefi.rs
crates/neonex-web/: Cargo.toml
crates/neonex-web/src/: lib.rs  windowed_plugins.rs
crates/uefi-terminal/: Cargo.toml
crates/uefi-terminal/src/: lib.rs  terminput_uefi.rs
examples/: Cargo.toml
examples/agnostic_logic/: Cargo.toml
examples/agnostic_logic/src/: lib.rs
examples/dekstop_crossterm_example/: Cargo.toml
examples/desktop_crossterm_example/: Cargo.toml
examples/desktop_crossterm_example/src/: main.rs
examples/desktop_softatui_example/: Cargo.toml
examples/desktop_softatui_example/src/: main.rs
examples/mobile_example/: Cargo.toml
examples/mobile_example/src/: lib.rs
examples/uefi_example/: Cargo.toml  uefi_run.sh
examples/uefi_example/src/: main.rs
examples/web_example/: Cargo.toml
examples/web_example/src/: main.rs
src/: main.rs  main_uefi_std.rs  std_init.rs
