[package]
name = "neonex-core"
version = "0.1.0"
edition = "2024"

[features]
desktop = ["dep:neonex-desktop"]
mobile = ["dep:neonex-mobile"]
web = ["dep:neonex-web"]

[dependencies]
bevy = "0.16.1"
neonex-desktop = { path = "../neonex-desktop", optional = true }
neonex-mobile = { path = "../neonex-mobile", optional = true }
neonex-web = { path = "../neonex-web", optional = true }
neonex-mockplatform = {path = "../neonex-mockplatform"}
neonex-platform = { path = "../neonex-platform"}
cfg-if = "1.0.1"