[package]
name = "neonex-desktop"
version = "0.1.0"
edition = "2024"

[features]
default = ["softatui"]
crossterm = ["ratatui/crossterm"]
softatui = ["dep:soft_ratatui"]
hybrid-contexts = ["dep:soft_ratatui", "ratatui/crossterm", "neonex-platform/desktop-hybrid-contexts", "dep:either"]

[dependencies]
either = { version = "1.15.0", default-features = false, optional = true }
bevy = "0.16.1"
neonex-platform = { path = "../neonex-platform" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
cfg-if = "1.0.1"
ratatui = {version = "0.29.0", default-features = false}
neonex-terminal = {path = "../neonex-terminal"}
neonex-shared = {path = "../neonex-shared"}
soft_ratatui = { version = "0.0.8", optional = true }