[package]
name = "neonex-mockplatform"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false }
neonex-platform = { path = "../neonex-platform" }
ratatui = { version = "0.29.0", default-features = false }
neonex-terminal = { path = "../neonex-terminal" }
neonex-shared = { path = "../neonex-shared" }
