[package]
name = "neonex-uefi"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "default_no_std",
] }
neonex-platform = { path = "../neonex-platform" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
cfg-if = "1.0.1"
ratatui = { version = "0.29.0", default-features = false }
uefi = { version = "0.35.0", features = ["alloc"] }
neonex-terminal = { path = "../neonex-terminal" }
neonex-shared = { path = "../neonex-shared" }
