[package]
name = "uefi-terminal"
# reuben olinsky is the original author: https://github.com/reubeno/tui-uefi
# Crate adapted for bevy & input+render merged
# All honour to him!
authors = ["reuben olinsky"]
edition = "2024"
rust-version = "1.86.0"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
uefi = { version = "0.35.0", features = ["alloc"] }
bevy = { version = "0.16.1", default-features = false }
neonex-terminal = {path = "../neonex-terminal"}