[package]
name = "agnostic_logic"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
bevy = { version = "0.16.1", default-features = false }
neonex-terminal = { path = "../../crates/neonex-terminal" }
neonex-core = { path = "../../crates/neonex-core" }
neonex-platform = { path = "../../crates/neonex-platform" }