[package]
name = "uefi_example"
version = "0.1.0"
edition = "2024"

[dependencies]
neonex-shared = { path = "../../crates/neonex-shared" }
neonex-terminal = { path = "../../crates/neonex-terminal" }
ratatui = { version = "0.29.0", default-features = false }
uefi = { version = "0.35.0", features = ["alloc"] }
bevy = { version = "0.16.1", default-features = false }
neonex-core = { path = "../../crates/neonex-core", features = ["uefi"] }
neonex-platform = { path = "../../crates/neonex-platform" }
agnostic_logic = { path = "../agnostic_logic" }

[package.metadata]
supported-targets = [
  "x86_64-unknown-uefi",
  "i686-unknown-uefi",
  "aarch64-unknown-uefi",
]
